pkg/extension/workspace/example/runtime/configdir/testdata/workspace3/expected/getenvoy_extension_run/envoy.tmpl.yaml
#
# Example Envoy configuration.
#
invalid yaml

admin: {"accessLogPath":"/dev/null","address":{"socketAddress":{"address":"127.0.0.1","portValue":9901}}}

static_resources:
  listeners:
    - name: ingress
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.wasm
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.wasm.v3.Wasm
                config:
                  configuration: "{\"key2\":\"value2\"}"
                  name: "mycompany.filters.http.custom_metrics"
                  root_id: "mycompany.filters.http.custom_metrics"
                  vm_config:
                    vm_id: "mycompany.filters.http.custom_metrics"
                    runtime: envoy.wasm.runtime.v8
                    code: {"local":{"filename":"/path/to/extension.wasm"}}
            - name: envoy.filters.network.tcp_proxy
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                stat_prefix: ingress
                cluster: mock_service

    - name: mock
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 10001
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: mock
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: mock
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "Hi from mock service!\n"
                http_filters:
                  - name: envoy.router

  clusters:
    - name: mock_service
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      hosts:
        - socket_address:
            address: 127.0.0.1
            port_value: 10001
